# btrs

./: Cargo.toml  LICENSE  README.md
src/: app.rs  main.rs  metainfo.rs  torrent.rs  tui.rs
src/app/: action.rs  ui_models.rs
src/torrent/: download.rs  files.rs  metainfo.rs  peer_session.rs  piece_manager.rs  tracker.rs
src/torrent/download/: tracker.rs
src/torrent/metainfo/: info.rs
src/torrent/peer_session/: message.rs  work.rs
src/tui/: torrent_details.rs  torrents_table.rs
test_files/: A_Little_Princess_WB39_WOC_2001-07_archive.torrent
