[package]
name = "btrs"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_bencode = "^0.2.4"
serde = "^1.0.0"
serde_derive = "^1.0.0"
serde_bytes = "0.11.17"
anyhow = "1.0.98"
urlencoding = "2.1.3"
sha1 = "0.10.6"
chrono = "0.4.41"
rand = "0.9.1"
serde_urlencoded = "0.7.1"
reqwest = "0.12.19"
tokio = { version = "1.45.1", features = ["full"] }
bytes = "1.10.1"
crossterm = "0.29.0"
ratatui = "0.29.0"
